# Digital-Nishika-N8000

./: InstallDependencies.sh  InstallDependenciesChoco.bat  N8000.py  Parts List - Digital Nishika N8000.xlsx  README.md
Code/: CMakeLists.txt
Code/DigitalNishikaN8000/: CMakeLists.txt  main.cpp
Example Code/: N8000.py
